test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_hidden.rs
use clapi::macros::*;

#[command]
#[option(x, hidden="xyz")]
fn app(x: i64){}

fn main(){}