test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_hidden.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_hidden.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: option `hidden` must be a bool literal
